--- a/apps/docs/src/content/components/action-bar.mdx
+++ b/apps/docs/src/content/components/action-bar.mdx
@@ -1,20 +1,12 @@
 import { Callout } from "nextra/components";
 import {
-  actionBarClasses,
+  actionBarClasses as classes,
   HvActionBar,
 } from "@hitachivantara/uikit-react-core";
 
-import { getComponentData } from "../../utils/component";
-
-import { Playground } from "../../components/code/Playground";
 import { Header } from "../../components/Header";
 
-export const getStaticProps = async ({ params }) => {
-  const meta = await getComponentData("ActionBar", "core", actionBarClasses);
-  return { props: { ssg: { meta } } };
-};
-
-<Header />
+<Header params={{ name: "ActionBar", classes }} />
 
 ### Usage
 
