--- a/apps/docs/src/content/components/app-switcher.mdx
+++ b/apps/docs/src/content/components/app-switcher.mdx
@@ -1,28 +1,14 @@
 import { Callout } from "nextra/components";
 import {
-  appSwitcherClasses,
+  appSwitcherClasses as classes,
   HvAppSwitcher,
 } from "@hitachivantara/uikit-react-core";
 import { Code, LeftAlign } from "@hitachivantara/uikit-react-icons";
 
-import { getComponentData } from "../../utils/component";
-
-import { Playground } from "../../components/code/Playground";
 import { Header } from "../../components/Header";
 
-export const getStaticProps = async ({ params }) => {
-  const meta = await getComponentData(
-    "AppSwitcher",
-    "core",
-    appSwitcherClasses,
-    ["Action"],
-  );
-  return { props: { ssg: { meta } } };
-};
-
-<Header />
-
-<Playground
+<Header
+  params={{ name: "AppSwitcher", classes, subComponents: ["Action"] }}
   Component={HvAppSwitcher}
   componentName="HvAppSwitcher"
   controls={{
