--- a/apps/docs/src/content/components/avatar-group.mdx
+++ b/apps/docs/src/content/components/avatar-group.mdx
@@ -1,26 +1,13 @@
 import {
-  avatarGroupClasses,
+  avatarGroupClasses as classes,
   HvAvatar,
   HvAvatarGroup,
 } from "@hitachivantara/uikit-react-core";
 
-import { getComponentData } from "../../utils/component";
-
-import { Playground } from "../../components/code/Playground";
 import { Header } from "../../components/Header";
 
-export const getStaticProps = async ({ params }) => {
-  const meta = await getComponentData(
-    "AvatarGroup",
-    "core",
-    avatarGroupClasses,
-  );
-  return { props: { ssg: { meta } } };
-};
-
-<Header />
-
-<Playground
+<Header
+  params={{ name: "AvatarGroup", classes }}
   Component={HvAvatarGroup}
   componentName="HvAvatarGroup"
   controls={{
@@ -51,7 +38,7 @@ export const getStaticProps = async ({ params }) => {
   <HvAvatar alt="Steve" src="https://i.imgur.com/8we9311.jpeg" />
   <HvAvatar alt="Sarah" src="https://i.imgur.com/2aJYRLM.jpeg" />
   <HvAvatar alt="Cristina" src="https://i.imgur.com/fj50fND.jpeg" />
-</Playground>
+</Header>
 
 ### Custom overflow component
 
