--- a/apps/docs/src/content/components/breadcrumb.mdx
+++ b/apps/docs/src/content/components/breadcrumb.mdx
@@ -1,23 +1,12 @@
 import {
-  breadCrumbClasses,
+  breadCrumbClasses as classes,
   HvBreadCrumb,
 } from "@hitachivantara/uikit-react-core";
 
-import { getComponentData } from "../../utils/component";
-
-import { Playground } from "../../components/code/Playground";
 import { Header } from "../../components/Header";
 
-export const getStaticProps = async ({ params }) => {
-  const meta = await getComponentData("BreadCrumb", "core", breadCrumbClasses, [
-    "PathElement",
-  ]);
-  return { props: { ssg: { meta } } };
-};
-
-<Header />
-
-<Playground
+<Header
+  params={{ name: "BreadCrumb", classes, subComponents: ["PathElement"] }}
   Component={HvBreadCrumb}
   componentName="HvBreadCrumb"
   controls={{
