--- a/apps/docs/src/content/components/carousel.mdx
+++ b/apps/docs/src/content/components/carousel.mdx
@@ -1,24 +1,13 @@
 import {
-  carouselClasses,
+  carouselClasses as classes,
   HvCarousel,
   HvCarouselSlide,
 } from "@hitachivantara/uikit-react-core";
 
-import { getComponentData } from "../../utils/component";
-
-import { Playground } from "../../components/code/Playground";
 import { Header } from "../../components/Header";
 
-export const getStaticProps = async ({ params }) => {
-  const meta = await getComponentData("Carousel", "core", carouselClasses, [
-    "CarouselSlide",
-  ]);
-  return { props: { ssg: { meta } } };
-};
-
-<Header />
-
-<Playground
+<Header
+  params={{ name: "Carousel", classes, subComponents: ["CarouselSlide"] }}
   Component={HvCarousel}
   componentName="HvCarousel"
   controls={{
@@ -38,7 +27,7 @@ export const getStaticProps = async ({ params }) => {
       alt={`landscape ${i + 1}`}
     />
   ))}
-</Playground>
+</Header>
 
 ### Thumbnails
 
