--- a/apps/docs/src/content/components/checkbox-group.mdx
+++ b/apps/docs/src/content/components/checkbox-group.mdx
@@ -1,26 +1,13 @@
 import {
-  checkBoxGroupClasses,
+  checkBoxGroupClasses as classes,
   HvCheckBox,
   HvCheckBoxGroup,
 } from "@hitachivantara/uikit-react-core";
 
-import { getComponentData } from "../../utils/component";
-
-import { Playground } from "../../components/code/Playground";
 import { Header } from "../../components/Header";
 
-export const getStaticProps = async ({ params }) => {
-  const meta = await getComponentData(
-    "CheckBoxGroup",
-    "core",
-    checkBoxGroupClasses,
-  );
-  return { props: { ssg: { meta } } };
-};
-
-<Header />
-
-<Playground
+<Header
+  params={{ name: "CheckBoxGroup", classes }}
   Component={HvCheckBoxGroup}
   componentName="HvCheckBoxGroup"
   controls={{
@@ -38,7 +25,7 @@ export const getStaticProps = async ({ params }) => {
   <HvCheckBox label="Bar Chart" value="1" />
   <HvCheckBox label="Line Chart" value="2" />
   <HvCheckBox label="Pie Chart" value="3" />
-</Playground>
+</Header>
 
 ### Controlled
 
