--- a/apps/docs/src/content/components/dropdown.mdx
+++ b/apps/docs/src/content/components/dropdown.mdx
@@ -1,18 +1,12 @@
-import { dropdownClasses, HvDropdown } from "@hitachivantara/uikit-react-core";
+import {
+  dropdownClasses as classes,
+  HvDropdown,
+} from "@hitachivantara/uikit-react-core";
 
-import { getComponentData } from "../../utils/component";
-
-import { Playground } from "../../components/code/Playground";
 import { Header } from "../../components/Header";
 
-export const getStaticProps = async ({ params }) => {
-  const meta = await getComponentData("Dropdown", "core", dropdownClasses);
-  return { props: { ssg: { meta } } };
-};
-
-<Header />
-
-<Playground
+<Header
+  params={{ name: "Dropdown", classes }}
   Component={HvDropdown}
   componentName="HvDropdown"
   controls={{
