--- a/apps/docs/src/content/components/empty-state.mdx
+++ b/apps/docs/src/content/components/empty-state.mdx
@@ -1,22 +1,13 @@
 import {
-  emptyStateClasses,
+  emptyStateClasses as classes,
   HvEmptyState,
 } from "@hitachivantara/uikit-react-core";
 import { Info } from "@hitachivantara/uikit-react-icons";
 
-import { getComponentData } from "../../utils/component";
-
-import { Playground } from "../../components/code/Playground";
 import { Header } from "../../components/Header";
 
-export const getStaticProps = async ({ params }) => {
-  const meta = await getComponentData("EmptyState", "core", emptyStateClasses);
-  return { props: { ssg: { meta } } };
-};
-
-<Header />
-
-<Playground
+<Header
+  params={{ name: "EmptyState", classes }}
   Component={HvEmptyState}
   componentName="HvEmptyState"
   controls={{
