--- a/apps/docs/src/content/components/panel.mdx
+++ b/apps/docs/src/content/components/panel.mdx
@@ -1,16 +1,11 @@
-import { HvPanel, panelClasses } from "@hitachivantara/uikit-react-core";
+import {
+  panelClasses as classes,
+  HvPanel,
+} from "@hitachivantara/uikit-react-core";
 
-import { getComponentData } from "../../utils/component";
-
-import { Playground } from "../../components/code/Playground";
 import { Header } from "../../components/Header";
 
-export const getStaticProps = async ({ params }) => {
-  const meta = await getComponentData("Panel", "core", panelClasses);
-  return { props: { ssg: { meta } } };
-};
-
-<Header />
+<Header params={{ name: "Panel", classes }} />
 
 ### Usage
 
