--- a/apps/docs/src/content/components/progress-bar.mdx
+++ b/apps/docs/src/content/components/progress-bar.mdx
@@ -1,25 +1,12 @@
 import {
+  progressBarClasses as classes,
   HvProgressBar,
-  progressBarClasses,
 } from "@hitachivantara/uikit-react-core";
 
-import { getComponentData } from "../../utils/component";
-
-import { Playground } from "../../components/code/Playground";
 import { Header } from "../../components/Header";
 
-export const getStaticProps = async ({ params }) => {
-  const meta = await getComponentData(
-    "ProgressBar",
-    "core",
-    progressBarClasses,
-  );
-  return { props: { ssg: { meta } } };
-};
-
-<Header />
-
-<Playground
+<Header
+  params={{ name: "ProgressBar", classes }}
   Component={HvProgressBar}
   componentName="HvProgressBar"
   controls={{
