--- a/apps/docs/src/content/components/selection-list.mdx
+++ b/apps/docs/src/content/components/selection-list.mdx
@@ -1,27 +1,14 @@
 import { Callout } from "nextra/components";
 import {
+  selectionListClasses as classes,
   HvListItem,
   HvSelectionList,
-  selectionListClasses,
 } from "@hitachivantara/uikit-react-core";
 
-import { getComponentData } from "../../utils/component";
-
-import { Playground } from "../../components/code/Playground";
 import { Header } from "../../components/Header";
 
-export const getStaticProps = async ({ params }) => {
-  const meta = await getComponentData(
-    "SelectionList",
-    "core",
-    selectionListClasses,
-  );
-  return { props: { ssg: { meta } } };
-};
-
-<Header />
-
-<Playground
+<Header
+  params={{ name: "SelectionList", classes }}
   Component={HvSelectionList}
   componentName="HvSelectionList"
   controls={{
@@ -42,7 +29,7 @@ export const getStaticProps = async ({ params }) => {
   <HvListItem value="carrot">🥕 Carrot</HvListItem>
   <HvListItem value="dragonfruit">🐉 Dragonfruit</HvListItem>
   <HvListItem value="eggplant">🍆 Eggplant</HvListItem>
-</Playground>
+</Header>
 
 <Callout type="info">
   If you need single selection, consider using
