--- a/apps/docs/src/content/components/simple-grid.mdx
+++ b/apps/docs/src/content/components/simple-grid.mdx
@@ -1,30 +1,19 @@
 import { Callout } from "nextra/components";
 import {
+  simpleGridClasses as classes,
   HvPanel,
   HvSimpleGrid,
-  simpleGridClasses,
 } from "@hitachivantara/uikit-react-core";
 
-import { getComponentData } from "../../utils/component";
-
-import { Playground } from "../../components/code/Playground";
 import { Header } from "../../components/Header";
-
-export const getStaticProps = async ({ params }) => {
-  const meta = await getComponentData("SimpleGrid", "core", simpleGridClasses);
-  return { props: { ssg: { meta } } };
-};
-
-<Header />
 
 <Callout type="info">
   Please check the [`HvGrid`](/components/grid) component documentation for more
   advanced grid configurations.
 </Callout>
 
-<br />
-
-<Playground
+<Header
+  params={{ name: "SimpleGrid", classes }}
   Component={HvSimpleGrid}
   componentName="HvSimpleGrid"
   controls={{
@@ -39,7 +28,7 @@ export const getStaticProps = async ({ params }) => {
   {[...Array(6).keys()].map((i) => (
     <HvPanel>Item {i + 1}</HvPanel>
   ))}
-</Playground>
+</Header>
 
 ### Breakpoints
 
