--- a/apps/docs/src/content/components/skeleton.mdx
+++ b/apps/docs/src/content/components/skeleton.mdx
@@ -1,24 +1,12 @@
 import {
-  HvAvatar,
-  HvCardMedia,
+  skeletonClasses as classes,
   HvSkeleton,
-  HvTypography,
-  skeletonClasses,
 } from "@hitachivantara/uikit-react-core";
 
-import { getComponentData } from "../../utils/component";
-
-import { Playground } from "../../components/code/Playground";
 import { Header } from "../../components/Header";
 
-export const getStaticProps = async ({ params }) => {
-  const meta = await getComponentData("Skeleton", "core", skeletonClasses);
-  return { props: { ssg: { meta } } };
-};
-
-<Header />
-
-<Playground
+<Header
+  params={{ name: "Skeleton", classes }}
   Component={HvSkeleton}
   componentName="HvSkeleton"
   controls={{
