--- a/apps/docs/src/content/components/tag.mdx
+++ b/apps/docs/src/content/components/tag.mdx
@@ -1,18 +1,9 @@
-import { HvTag, tagClasses } from "@hitachivantara/uikit-react-core";
+import { tagClasses as classes, HvTag } from "@hitachivantara/uikit-react-core";
 
-import { getComponentData } from "../../utils/component";
-
-import { Playground } from "../../components/code/Playground";
 import { Header } from "../../components/Header";
 
-export const getStaticProps = async ({ params }) => {
-  const meta = await getComponentData("Tag", "core", tagClasses);
-  return { props: { ssg: { meta } } };
-};
-
-<Header />
-
-<Playground
+<Header
+  params={{ name: "Tag", classes }}
   Component={HvTag}
   componentName="HvTag"
   controls={{
