--- a/apps/docs/src/content/components/textarea.mdx
+++ b/apps/docs/src/content/components/textarea.mdx
@@ -1,19 +1,13 @@
 import { Callout } from "nextra/components";
-import { HvTextArea, textAreaClasses } from "@hitachivantara/uikit-react-core";
+import {
+  textAreaClasses as classes,
+  HvTextArea,
+} from "@hitachivantara/uikit-react-core";
 
-import { getComponentData } from "../../utils/component";
-
-import { Playground } from "../../components/code/Playground";
 import { Header } from "../../components/Header";
 
-export const getStaticProps = async ({ params }) => {
-  const meta = await getComponentData("TextArea", "core", textAreaClasses);
-  return { props: { ssg: { meta } } };
-};
-
-<Header />
-
-<Playground
+<Header
+  params={{ name: "TextArea", classes }}
   Component={HvTextArea}
   componentName="HvTextArea"
   controls={{
