--- a/apps/docs/src/content/charts/bar-chart.mdx
+++ b/apps/docs/src/content/charts/bar-chart.mdx
@@ -1,14 +1,6 @@
-import { getComponentData } from "../../utils/component";
-
-import { Playground } from "../../components/code/Playground";
 import { Header } from "../../components/Header";
 
-export const getStaticProps = async ({ params }) => {
-  const meta = await getComponentData("BarChart", "viz", {}, [], true);
-  return { props: { ssg: { meta } } };
-};
-
-<Header />
+<Header params={{ name: "BarChart", packageName: "viz", showAllProps: true }} />
 
 ### Usage
 
