--- a/apps/docs/src/content/charts/donut-chart.mdx
+++ b/apps/docs/src/content/charts/donut-chart.mdx
@@ -1,16 +1,10 @@
 import { Callout } from "nextra/components";
 
-import { getComponentData } from "../../utils/component";
-
-import { Playground } from "../../components/code/Playground";
 import { Header } from "../../components/Header";
 
-export const getStaticProps = async ({ params }) => {
-  const meta = await getComponentData("DonutChart", "viz", {}, [], true);
-  return { props: { ssg: { meta } } };
-};
-
-<Header />
+<Header
+  params={{ name: "DonutChart", packageName: "viz", showAllProps: true }}
+/>
 
 ### Usage
 
