--- a/apps/docs/src/content/charts/scatter-plot.mdx
+++ b/apps/docs/src/content/charts/scatter-plot.mdx
@@ -1,14 +1,8 @@
-import { getComponentData } from "../../utils/component";
-
-import { Playground } from "../../components/code/Playground";
 import { Header } from "../../components/Header";
 
-export const getStaticProps = async ({ params }) => {
-  const meta = await getComponentData("ScatterPlot", "viz", {}, [], true);
-  return { props: { ssg: { meta } } };
-};
-
-<Header />
+<Header
+  params={{ name: "ScatterPlot", packageName: "viz", showAllProps: true }}
+/>
 
 ### Usage
 
