--- a/apps/docs/src/content/components/badge.mdx
+++ b/apps/docs/src/content/components/badge.mdx
@@ -1,19 +1,13 @@
-import { badgeClasses, HvBadge } from "@hitachivantara/uikit-react-core";
+import {
+  badgeClasses as classes,
+  HvBadge,
+} from "@hitachivantara/uikit-react-core";
 import { Alert } from "@hitachivantara/uikit-react-icons";
 
-import { getComponentData } from "../../utils/component";
-
-import { Playground } from "../../components/code/Playground";
 import { Header } from "../../components/Header";
 
-export const getStaticProps = async ({ params }) => {
-  const meta = await getComponentData("Badge", "core", badgeClasses);
-  return { props: { ssg: { meta } } };
-};
-
-<Header />
-
-<Playground
+<Header
+  params={{ name: "Badge", classes }}
   Component={HvBadge}
   componentName="HvBadge"
   controls={{
