--- a/apps/docs/src/content/components/banner.mdx
+++ b/apps/docs/src/content/components/banner.mdx
@@ -1,20 +1,12 @@
-import { bannerClasses, HvBanner } from "@hitachivantara/uikit-react-core";
+import {
+  bannerClasses as classes,
+  HvBanner,
+} from "@hitachivantara/uikit-react-core";
 
-import { getComponentData } from "../../utils/component";
-
-import { Playground } from "../../components/code/Playground";
 import { Header } from "../../components/Header";
 
-export const getStaticProps = async ({ params }) => {
-  const meta = await getComponentData("Banner", "core", bannerClasses, [
-    "BannerContent",
-  ]);
-  return { props: { ssg: { meta } } };
-};
-
-<Header />
-
-<Playground
+<Header
+  params={{ name: "Banner", classes, subComponents: ["BannerContent"] }}
   Component={HvBanner}
   componentName="HvBanner"
   controls={{
