--- a/apps/docs/src/content/components/card.mdx
+++ b/apps/docs/src/content/components/card.mdx
@@ -1,20 +1,17 @@
-import { cardClasses, HvCard } from "@hitachivantara/uikit-react-core";
+import {
+  cardClasses as classes,
+  HvCard,
+} from "@hitachivantara/uikit-react-core";
 
-import { getComponentData } from "../../utils/component";
-
-import { Playground } from "../../components/code/Playground";
 import { Header } from "../../components/Header";
 
-export const getStaticProps = async ({ params }) => {
-  const meta = await getComponentData("Card", "core", cardClasses, [
-    "Header",
-    "Content",
-    "Media",
-  ]);
-  return { props: { ssg: { meta } } };
-};
-
-<Header />
+<Header
+  params={{
+    name: "Card",
+    classes,
+    subComponents: ["Header", "Content", "Media"],
+  }}
+/>
 
 ```tsx live
 <HvCard
@@ -115,6 +112,7 @@ export default function Demo() {
     <div className="flex flex-row gap-sm w-full">
       {storages.map((p, idx) => (
         <StorageCard
+          key={idx}
           selected={checked === idx}
           title={p.name}
           icon={p.icon}
