--- a/apps/docs/src/content/components/color-picker.mdx
+++ b/apps/docs/src/content/components/color-picker.mdx
@@ -1,25 +1,12 @@
 import {
-  colorPickerClasses,
+  colorPickerClasses as classes,
   HvColorPicker,
 } from "@hitachivantara/uikit-react-core";
 
-import { getComponentData } from "../../utils/component";
-
-import { Playground } from "../../components/code/Playground";
 import { Header } from "../../components/Header";
 
-export const getStaticProps = async ({ params }) => {
-  const meta = await getComponentData(
-    "ColorPicker",
-    "core",
-    colorPickerClasses,
-  );
-  return { props: { ssg: { meta } } };
-};
-
-<Header />
-
-<Playground
+<Header
+  params={{ name: "ColorPicker", classes }}
   Component={HvColorPicker}
   componentName="HvColorPicker"
   controls={{
