--- a/apps/docs/src/content/components/date-picker.mdx
+++ b/apps/docs/src/content/components/date-picker.mdx
@@ -1,21 +1,12 @@
 import {
-  datePickerClasses,
+  datePickerClasses as classes,
   HvDatePicker,
 } from "@hitachivantara/uikit-react-core";
 
-import { getComponentData } from "../../utils/component";
-
-import { Playground } from "../../components/code/Playground";
 import { Header } from "../../components/Header";
 
-export const getStaticProps = async ({ params }) => {
-  const meta = await getComponentData("DatePicker", "core", datePickerClasses);
-  return { props: { ssg: { meta } } };
-};
-
-<Header />
-
-<Playground
+<Header
+  params={{ name: "DatePicker", classes }}
   Component={HvDatePicker}
   componentName="HvDatePicker"
   controls={{
