--- a/apps/docs/src/content/components/dialog.mdx
+++ b/apps/docs/src/content/components/dialog.mdx
@@ -1,23 +1,14 @@
 import {
-  dialogClasses,
-  HvButton,
+  dialogClasses as classes,
   HvDialog,
   HvDialogActions,
   HvDialogContent,
   HvDialogTitle,
 } from "@hitachivantara/uikit-react-core";
 
-import { getComponentData } from "../../utils/component";
-
-import { Playground } from "../../components/code/Playground";
 import { Header } from "../../components/Header";
 
-export const getStaticProps = async ({ params }) => {
-  const meta = await getComponentData("Dialog", "core", dialogClasses);
-  return { props: { ssg: { meta: meta } } };
-};
-
-<Header />
+<Header params={{ name: "Dialog", classes }} />
 
 ### Maximum width
 
