--- a/apps/docs/src/content/components/dot-pagination.mdx
+++ b/apps/docs/src/content/components/dot-pagination.mdx
@@ -1,24 +1,12 @@
 import { Callout } from "nextra/components";
 import {
-  dotPaginationClasses,
+  dotPaginationClasses as classes,
   HvDotPagination,
 } from "@hitachivantara/uikit-react-core";
 
-import { getComponentData } from "../../utils/component";
-
-import { Playground } from "../../components/code/Playground";
 import { Header } from "../../components/Header";
 
-export const getStaticProps = async ({ params }) => {
-  const meta = await getComponentData(
-    "DotPagination",
-    "core",
-    dotPaginationClasses,
-  );
-  return { props: { ssg: { meta } } };
-};
-
-<Header />
+<Header params={{ name: "DotPagination", classes }} />
 
 <Callout type="info">
   You can use the `HvPagination` component to create a more complete pagination
