--- a/apps/docs/src/content/components/drawer.mdx
+++ b/apps/docs/src/content/components/drawer.mdx
@@ -1,17 +1,12 @@
-import { drawerClasses, HvDrawer } from "@hitachivantara/uikit-react-core";
+import {
+  drawerClasses as classes,
+  HvDrawer,
+} from "@hitachivantara/uikit-react-core";
 import { Alert } from "@hitachivantara/uikit-react-icons";
 
-import { getComponentData } from "../../utils/component";
-
-import { Playground } from "../../components/code/Playground";
 import { Header } from "../../components/Header";
 
-export const getStaticProps = async ({ params }) => {
-  const meta = await getComponentData("Drawer", "core", drawerClasses);
-  return { props: { ssg: { meta } } };
-};
-
-<Header />
+<Header params={{ name: "Drawer", classes }} />
 
 ```tsx live
 import { useState } from "react";
