--- a/apps/docs/src/content/components/number-input.mdx
+++ b/apps/docs/src/content/components/number-input.mdx
@@ -1,19 +1,13 @@
 import { Callout } from "nextra/components";
-import { HvNumberInput, inputClasses } from "@hitachivantara/uikit-react-core";
+import {
+  inputClasses as classes,
+  HvNumberInput,
+} from "@hitachivantara/uikit-react-core";
 
-import { getComponentData } from "../../utils/component";
-
-import { Playground } from "../../components/code/Playground";
 import { Header } from "../../components/Header";
 
-export const getStaticProps = async ({ params }) => {
-  const meta = await getComponentData("NumberInput", "core", inputClasses);
-  return { props: { ssg: { meta } } };
-};
-
-<Header />
-
-<Playground
+<Header
+  params={{ name: "NumberInput", classes }}
   Component={HvNumberInput}
   componentName="HvNumberInput"
   controls={{
