--- a/apps/docs/src/content/components/pagination.mdx
+++ b/apps/docs/src/content/components/pagination.mdx
@@ -1,22 +1,13 @@
 import { Callout } from "nextra/components";
 import {
+  paginationClasses as classes,
   HvPagination,
-  paginationClasses,
 } from "@hitachivantara/uikit-react-core";
 
-import { getComponentData } from "../../utils/component";
-
-import { Playground } from "../../components/code/Playground";
 import { Header } from "../../components/Header";
 
-export const getStaticProps = async ({ params }) => {
-  const meta = await getComponentData("Pagination", "core", paginationClasses);
-  return { props: { ssg: { meta } } };
-};
-
-<Header />
-
-<Playground
+<Header
+  params={{ name: "Pagination", classes }}
   Component={HvPagination}
   componentName="HvPagination"
   controls={{
