--- a/apps/docs/src/content/components/radio-group.mdx
+++ b/apps/docs/src/content/components/radio-group.mdx
@@ -1,22 +1,13 @@
 import {
+  radioGroupClasses as classes,
   HvRadio,
   HvRadioGroup,
-  radioGroupClasses,
 } from "@hitachivantara/uikit-react-core";
 
-import { getComponentData } from "../../utils/component";
-
-import { Playground } from "../../components/code/Playground";
 import { Header } from "../../components/Header";
 
-export const getStaticProps = async ({ params }) => {
-  const meta = await getComponentData("RadioGroup", "core", radioGroupClasses);
-  return { props: { ssg: { meta } } };
-};
-
-<Header />
-
-<Playground
+<Header
+  params={{ name: "RadioGroup", classes }}
   Component={HvRadioGroup}
   componentName="HvRadioGroup"
   controls={{
@@ -34,7 +25,7 @@ export const getStaticProps = async ({ params }) => {
   <HvRadio label="Bar Chart" value="1" />
   <HvRadio label="Line Chart" value="2" />
   <HvRadio label="Pie Chart" value="3" />
-</Playground>
+</Header>
 
 ### Controlled
 
