--- a/apps/docs/src/content/components/radio.mdx
+++ b/apps/docs/src/content/components/radio.mdx
@@ -1,18 +1,12 @@
-import { HvRadio, radioClasses } from "@hitachivantara/uikit-react-core";
+import {
+  radioClasses as classes,
+  HvRadio,
+} from "@hitachivantara/uikit-react-core";
 
-import { getComponentData } from "../../utils/component";
-
-import { Playground } from "../../components/code/Playground";
 import { Header } from "../../components/Header";
 
-export const getStaticProps = async ({ params }) => {
-  const meta = await getComponentData("Radio", "core", radioClasses);
-  return { props: { ssg: { meta } } };
-};
-
-<Header />
-
-<Playground
+<Header
+  params={{ name: "Radio", classes }}
   Component={HvRadio}
   componentName="HvRadio"
   controls={{
