--- a/apps/docs/src/content/components/scroll-to-horizontal.mdx
+++ b/apps/docs/src/content/components/scroll-to-horizontal.mdx
@@ -1,30 +1,16 @@
 import {
-  HvContainer,
-  HvInput,
-  HvPanel,
+  scrollToHorizontalClasses as classes,
   HvScrollToHorizontal,
-  HvTypography,
-  scrollToHorizontalClasses,
 } from "@hitachivantara/uikit-react-core";
 
-import { getComponentData } from "../../utils/component";
-
-import { Playground } from "../../components/code/Playground";
 import { Header } from "../../components/Header";
 
-export const getStaticProps = async ({ params }) => {
-  const meta = await getComponentData(
-    "ScrollToHorizontal",
-    "core",
-    scrollToHorizontalClasses,
-    ["HorizontalScrollListItem"],
-  );
-  return { props: { ssg: { meta } } };
-};
-
-<Header />
-
-<Playground
+<Header
+  params={{
+    name: "ScrollToHorizontal",
+    classes,
+    subComponents: ["HorizontalScrollListItem"],
+  }}
   Component={HvScrollToHorizontal}
   componentName="HvScrollToHorizontal"
   controls={{
