--- a/apps/docs/src/content/components/scroll-to-vertical.mdx
+++ b/apps/docs/src/content/components/scroll-to-vertical.mdx
@@ -1,30 +1,16 @@
 import {
-  HvContainer,
-  HvInput,
-  HvPanel,
+  scrollToVerticalClasses as classes,
   HvScrollToVertical,
-  HvTypography,
-  scrollToVerticalClasses,
 } from "@hitachivantara/uikit-react-core";
 
-import { getComponentData } from "../../utils/component";
-
-import { Playground } from "../../components/code/Playground";
 import { Header } from "../../components/Header";
 
-export const getStaticProps = async ({ params }) => {
-  const meta = await getComponentData(
-    "ScrollToVertical",
-    "core",
-    scrollToVerticalClasses,
-    ["VerticalScrollListItem"],
-  );
-  return { props: { ssg: { meta } } };
-};
-
-<Header />
-
-<Playground
+<Header
+  params={{
+    name: "ScrollToVertical",
+    classes,
+    subComponents: ["VerticalScrollListItem"],
+  }}
   Component={HvScrollToVertical}
   componentName="HvScrollToVertical"
   controls={{
