--- a/apps/docs/src/content/components/stack.mdx
+++ b/apps/docs/src/content/components/stack.mdx
@@ -1,22 +1,13 @@
 import {
+  stackClasses as classes,
   HvPanel,
   HvStack,
-  stackClasses,
 } from "@hitachivantara/uikit-react-core";
 
-import { getComponentData } from "../../utils/component";
-
-import { Playground } from "../../components/code/Playground";
 import { Header } from "../../components/Header";
 
-export const getStaticProps = async ({ params }) => {
-  const meta = await getComponentData("Stack", "core", stackClasses);
-  return { props: { ssg: { meta } } };
-};
-
-<Header />
-
-<Playground
+<Header
+  params={{ name: "Stack", classes }}
   Component={HvStack}
   componentName="HvStack"
   controls={{
@@ -28,7 +19,7 @@ export const getStaticProps = async ({ params }) => {
   {[...Array(4).keys()].map((index) => (
     <HvPanel key={index}>{index + 1}</HvPanel>
   ))}
-</Playground>
+</Header>
 
 ### Custom direction
 
