--- a/apps/docs/src/content/components/switch.mdx
+++ b/apps/docs/src/content/components/switch.mdx
@@ -1,18 +1,12 @@
-import { HvSwitch, switchClasses } from "@hitachivantara/uikit-react-core";
+import {
+  switchClasses as classes,
+  HvSwitch,
+} from "@hitachivantara/uikit-react-core";
 
-import { getComponentData } from "../../utils/component";
-
-import { Playground } from "../../components/code/Playground";
 import { Header } from "../../components/Header";
 
-export const getStaticProps = async ({ params }) => {
-  const meta = await getComponentData("Switch", "core", switchClasses);
-  return { props: { ssg: { meta } } };
-};
-
-<Header />
-
-<Playground
+<Header
+  params={{ name: "Switch", classes }}
   Component={HvSwitch}
   componentName="HvSwitch"
   controls={{
