--- a/apps/docs/src/content/components/toggle-button.mdx
+++ b/apps/docs/src/content/components/toggle-button.mdx
@@ -1,19 +1,10 @@
 import { HvToggleButton } from "@hitachivantara/uikit-react-core";
 import { Favorite, FavoriteSelected } from "@hitachivantara/uikit-react-icons";
 
-import { getComponentData } from "../../utils/component";
-
-import { Playground } from "../../components/code/Playground";
 import { Header } from "../../components/Header";
 
-export const getStaticProps = async ({ params }) => {
-  const meta = await getComponentData("ToggleButton", "core", []);
-  return { props: { ssg: { meta } } };
-};
-
-<Header />
-
-<Playground
+<Header
+  params={{ name: "ToggleButton" }}
   Component={HvToggleButton}
   componentName="HvToggleButton"
   controls={{
