--- a/apps/docs/src/content/components/tooltip.mdx
+++ b/apps/docs/src/content/components/tooltip.mdx
@@ -1,23 +1,14 @@
 import { Callout } from "nextra/components";
 import {
+  tooltipClasses as classes,
   HvButton,
   HvTooltip,
-  tooltipClasses,
 } from "@hitachivantara/uikit-react-core";
 
-import { getComponentData } from "../../utils/component";
-
-import { Playground } from "../../components/code/Playground";
 import { Header } from "../../components/Header";
 
-export const getStaticProps = async ({ params }) => {
-  const meta = await getComponentData("Tooltip", "core", tooltipClasses);
-  return { props: { ssg: { meta } } };
-};
-
-<Header />
-
-<Playground
+<Header
+  params={{ name: "Tooltip", classes }}
   Component={HvTooltip}
   componentName="HvTooltip"
   controls={{
@@ -29,7 +20,7 @@ export const getStaticProps = async ({ params }) => {
   }}
 >
   <HvButton variant="primarySubtle">Hover or focus here</HvButton>
-</Playground>
+</Header>
 
 <Callout type="info">
   `HvTooltip` uses Material UI's tooltip under the hood. You can find more
