--- a/apps/docs/src/content/components/typography.mdx
+++ b/apps/docs/src/content/components/typography.mdx
@@ -1,21 +1,12 @@
 import {
+  typographyClasses as classes,
   HvTypography,
-  typographyClasses,
 } from "@hitachivantara/uikit-react-core";
 
-import { getComponentData } from "../../utils/component";
-
-import { Playground } from "../../components/code/Playground";
 import { Header } from "../../components/Header";
 
-export const getStaticProps = async ({ params }) => {
-  const meta = await getComponentData("Typography", "core", typographyClasses);
-  return { props: { ssg: { meta } } };
-};
-
-<Header />
-
-<Playground
+<Header
+  params={{ name: "Typography", classes }}
   Component={HvTypography}
   componentName="HvTypography"
   controls={{
