--- a/apps/docs/src/pages/examples/canvas.mdx
+++ b/apps/docs/src/pages/examples/canvas.mdx
@@ -1,24 +1,25 @@
 import { CodeBlock } from "../../components/code/CodeBlock";
 
-import canvas from "../../examples/canvas/Canvas?raw";
-import canvasContext from "../../examples/canvas/Context?raw";
-import canvasListView from "../../examples/canvas/ListView?raw";
-import canvasNode from "../../examples/canvas/Node?raw";
-import canvasSidebar from "../../examples/canvas/Sidebar?raw";
-import canvasStatusEdge from "../../examples/canvas/StatusEdge?raw";
-import canvasTable from "../../examples/canvas/Table?raw";
-import canvasTreeView from "../../examples/canvas/TreeView?raw";
-import canvasUtils from "../../examples/canvas/utils?raw";
+import canvasContext from "../../../../../templates/Canvas/Context?raw";
+import canvasMain from "../../../../../templates/Canvas/index?raw";
+import canvasListView from "../../../../../templates/Canvas/ListView?raw";
+import canvasNode from "../../../../../templates/Canvas/Node?raw";
+import canvasSidebar from "../../../../../templates/Canvas/Sidebar?raw";
+import canvasStatusEdge from "../../../../../templates/Canvas/StatusEdge?raw";
+import canvasStyles from "../../../../../templates/Canvas/styles?raw";
+import canvasTable from "../../../../../templates/Canvas/Table?raw";
+import canvasTreeView from "../../../../../templates/Canvas/TreeView?raw";
+import canvasUtils from "../../../../../templates/Canvas/utils?raw";
 
 <div className="mt-20">
   <CodeBlock
-    layout="toggable"
     code={{
-      main: canvas,
-      "./Context": canvasContext,
+      main: canvasMain,
       "./utils": canvasUtils,
-      "./Node": canvasNode,
+      "./styles": canvasStyles,
+      "./Context": canvasContext,
       "./ListView": canvasListView,
+      "./Node": canvasNode,
       "./Sidebar": canvasSidebar,
       "./StatusEdge": canvasStatusEdge,
       "./Table": canvasTable,
